--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,11 @@ body {
   background-color: lightgrey;
 }
 
-h1 {
-  color:blue;
-  font-family: verdana;
-  font-size: 24px;
-}
-h2 {
-  color:blue;
-  font-family: cursive;
-  font-size: 16px;
+.work {
+   float: left;
+   margin: 10px;
+   padding: 10px;
+   width: 300px;
+   height: 300px;
+   border: 1px solid black;
 }
