--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@ body {
   background-color: lightgrey;
 }
 
+header{
+  background-color: inherit;
+  color: inherit;
+  text-align: center;
+  padding: 5px;
+}
+
 .work {
    float: left;
    margin: 10px;
