--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ header{
   background-color: inherit;
   color: inherit;
   font-family: cursive;
+  font-size: 24px;
   text-align: center;
   padding: 5px;
 }
