--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,12 @@ header{
 }
 
 .work {
-   float: center;
+   float: left;
    margin: 10px;
    padding: 10px;
    width: 300px;
    height: 300px;
-   border: 1px solid black;
+   border: 5px solid black;
 }
 
 h2 {
