--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header{
    padding: 10px;
    width: 300px;
    height: 300px;
-   /*border: 5px solid black;*/
+   border: 5px solid black;
 }
 
 h2 {
