--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ header{
 nav{
   line-height: 30px;
   background-color: inherit;
+  font-family: cursive;
+  font-size: 18px;
   height: 300px;
   width: 100px;
   float:left;
